# usbhidproxy

./: .gitmodules  CMakeLists.txt  README.md
board_include/: picossci_usbhost.h
include/: tusb_config.h
src/: debug_func.c  debug_func.h  usbhidproxy.c
